--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1120</width>
-    <height>660</height>
+    <height>689</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -117,7 +117,7 @@
       <x>10</x>
       <y>250</y>
       <width>761</width>
-      <height>391</height>
+      <height>431</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -135,7 +135,7 @@
        <x>10</x>
        <y>30</y>
        <width>631</width>
-       <height>351</height>
+       <height>391</height>
       </rect>
      </property>
     </widget>
@@ -264,6 +264,24 @@
      </property>
      <property name="text">
       <string>MobileNet_V2</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="BTN_XCEPTION">
+     <property name="geometry">
+      <rect>
+       <x>650</x>
+       <y>390</y>
+       <width>101</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Xception</string>
      </property>
     </widget>
    </widget>
